--- a/app/src/main/res/layout/fragment_partes.xml
+++ b/app/src/main/res/layout/fragment_partes.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.consorciosm.sanmiguel.ui.main.ui.gallery.GalleryFragment">
+    tools:context=".ui.main.admin.ui.partes.PartesFragment">
 
     <TextView
-        android:id="@+id/text_gallery"
+        android:id="@+id/text_slideshow"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
