--- a/app/src/main/res/layout/fragment_registro_personal.xml
+++ b/app/src/main/res/layout/fragment_registro_personal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.consorciosm.sanmiguel.ui.main.ui.home.HomeFragment">
+    tools:context=".ui.main.admin.ui.registro_personal.RegistroPersonalFragment">
 
     <TextView
         android:id="@+id/text_home"
