--- a/app/src/main/res/layout/activity_supervisor.xml
+++ b/app/src/main/res/layout/activity_supervisor.xml
@@ -9,37 +9,30 @@
     tools:openDrawer="start">
 
 
-    <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_inicio_main"
-        app:menu="@menu/menu_supervisor" />
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.consorciosm.sanmiguel.ui.main.admin.InicioMain">
+        android:layout_height="match_parent">
 
         <include
             layout="@layout/app_bar_inicio_main"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize" />
         <fragment
-            android:id="@+id/nav_host_fragment"
+            android:id="@+id/nav_host_supervisor"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_height="match_parent"
             app:defaultNavHost="true"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            tools:showIn="@layout/app_bar_inicio_main"
-            app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/nav_supervisor" />
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navview"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_inicio_main"
+        app:menu="@menu/menu_supervisor" />
 </androidx.drawerlayout.widget.DrawerLayout>
