--- a/app/src/main/res/menu/menu_supervisor.xml
+++ b/app/src/main/res/menu/menu_supervisor.xml
@@ -2,7 +2,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
-
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_registro"
@@ -16,7 +15,7 @@
             android:id="@+id/nav_partes"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Partes diarios" />
-        <item
+        <!--item
             android:id="@+id/nav_permisos"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Ordenes Programadas" />
@@ -28,17 +27,10 @@
             android:id="@+id/nav_validacion"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Validacion registros diarios" />
-
-    </group>
-    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_perfil"
             android:icon="@drawable/ic_menu_slideshow"
-            android:title="Mi perfil" />
-        <item
-            android:id="@+id/nav_logout"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Cerrar cesion" />
+            android:title="Mi perfil" /-->
 
     </group>
 
