--- a/app/src/main/res/layout/fragment_registro_carros.xml
+++ b/app/src/main/res/layout/fragment_registro_carros.xml
@@ -169,12 +169,22 @@
                 android:layout_height="wrap_content"/>
 
             <ImageView
-                android:layout_marginBottom="50dp"
                 android:id="@+id/img_vehiculo_frc"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/ic_launcher_background"
                 android:layout_width="200dp"
                 android:layout_height="200dp"/>
+
+            <Button
+
+                android:id="@+id/btn_registrar_frc"
+                android:layout_marginTop="20dp"
+                android:layout_marginHorizontal="20dp"
+                android:gravity="center"
+                android:layout_marginBottom="50dp"
+                android:text="Registrar Vehiculo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
 
 
         </LinearLayout>
